# exploration-hacking-bench

./: .gitignore  README.md  main.py  pyproject.toml  run_sweep.py
analysis/: compare_accuracy.py  compute_transition_matrix.py
configs/prompts/: README.md  SCAFFOLDING_OVERVIEW.md
configs/prompts/judges/: judge_c1_evaluation_awareness.yaml  judge_c2_goal_conflict.yaml  judge_c3_strategic_planning.yaml  judge_c4_strategic_action.yaml  judge_dim1_training_awareness.yaml  judge_dim2_strategic_reasoning_propensity.yaml  judge_dim3_strategic_reasoning_capability.yaml  judge_dim4_strategic_action_propensity.yaml  judge_eh_default.yaml  judge_eh_dimensions.yaml  judge_eh_holistic.yaml  judge_eh_response_type.yaml  judge_situational_awareness.yaml  judge_strategic_action.yaml  judge_strategic_reasoning_propensity.yaml  judge_strategy_generation.yaml
environments/discovery/level3-tm1/: evaluation_log.txt
environments/discovery/level3-tm2/: evaluation_log.txt
environments/discovery/level4-tm2/: evaluation_log.txt  technical_notes.txt
environments/discovery/level5-tm1/: assessment_notes.txt  evaluation_log.txt  methodology.txt  technical_notes.txt
environments/discovery/level5-tm2/: assessment_notes.txt
src/ehbench/: parsing.py  prompts_loader.py
src/ehbench/prompts/: scaffolding.py
src/ehbench/scorers/: __init__.py  agentic_scorer.py  eh_judge.py  markov_scorer.py  single_response_scorer.py
src/ehbench/tasks/: agentic_discovery.py  sequential_mcq.py  single_turn_mcq.py  wmdp.py
src/ehbench/tools/: discover_tools.py
tasks/wmdp/: task_config.yaml
(+37 files in other folders)
