[project]
name = "exploration-hacking-bench"
version = "0.1.0"
description = "A benchmark for measuring exploration hacking propensity in LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "datasets>=4.8.5",
    "google-generativeai>=0.8.6",
    "inspect-ai>=0.3.213",
    "openai>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
